--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ s0.parentNode.insertBefore(s1,s0);
     <div id="main-events-popup" class="popup-modal">
         <div class="popup-event-content">
             <span class="popup-close-button" id="close-main-events-popup">&times;</span>
-            <h2>&#127881; Principais Eventos do Ano! &#127881;</h2>
+            <h2> Principais Eventos do Ano! </h2>
             <p class="popup-subtitle">Fique por dentro dos acontecimentos mais importantes do mundo esportivo!</p>
             <div id="main-events-list">
                 <p>Carregando eventos...</p>
